# SubConscious-Engine

./: .gitignore  ARCHITECTURE.md  CODING_STANDARD.md  CONFIG.md  LESSONS_LEARNED.md  PLAN.md  README-AGENT.md  TODO.md  UPGRADE-HERMES-version.md  VERSION-NOTES.md  config.test.yaml  config.yaml.example  pyproject.toml
.cursor/rules/: sanitize-public-content.mdc
config/examples/: weather-warsaw.yaml
docs/: CRON-AND-INBOX.md
examples/: WORKING-DEPLOYMENT.md
examples/working-deployment/: FILE-MAP.md  engine-config.minimal.yaml  engine-config.orchestrator-replica.yaml  engine-config.production.yaml  hermes-gateway.snippet.yaml  state.example.yaml  systemd-service.example
hermes/: install-skill.sh
hermes/inbox-digest-curator/: SKILL.md
hermes/subconscious-engine-config/: SKILL.md
hermes/subconscious-engine-nudges/: SKILL.md
scripts/: install.sh
src/: __init__.py  __main__.py  app.py  notify_gate.py  state.py
src/checks/: __init__.py  context.py  decisions.py  file_rules.py  inbox.py  prompts.py  vault_rules.py
src/config/: __init__.py  loader.py  models.py  parser.py
src/delivery/: __init__.py  sessions.py  subconscious.py
src/events/: __init__.py  bus.py  models.py
systemd/: subconscious-engine.service
tests/: conftest.py  test_bus.py  test_checks.py  test_config.py  test_delivery.py  test_event_models.py  test_file_watcher.py  test_handlers.py  test_idle_source.py  test_notify_gate.py  test_open_meteo.py  test_rest_ack.py  test_rest_poll_parse.py  test_rest_poller.py  test_router.py  test_router_ack.py  test_rules.py  test_state.py
(+18 files in other folders)
